--- a/package.json
+++ b/package.json
@@ -8,8 +8,30 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/react": "^1.6.0",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.3.0",
+    "@hookform/resolvers": "^2.4.0",
+    "apexcharts": "^3.26.1",
+    "axios": "^0.21.1",
+    "framer-motion": "^4.1.11",
     "next": "10.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-apexcharts": "^1.3.9",
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.4.0",
+    "react-icons": "^4.2.0",
+    "react-query": "^3.15.2",
+    "yup": "^0.32.9"
+  },
+  "devDependencies": {
+    "@types/faker": "^5.5.3",
+    "@types/node": "^15.0.1",
+    "@types/react": "^17.0.4",
+    "@types/react-dom": "^17.0.3",
+    "faker": "^5.5.3",
+    "miragejs": "^0.1.41",
+    "typescript": "^4.2.4"
   }
 }
